--- a/flex/05-flex-modal/index.html
+++ b/flex/05-flex-modal/index.html
@@ -11,16 +11,30 @@
 
 <body>
   <div class="modal">
+
+    <div class="icon">!</div>
+
     <div class="container">
-      <div class="icon">!</div>
-      <div class="header">Are you sure you want to do that?</div>
-      <div class="close-button">✖</div>
+
+      <div class="first-row">
+        <div class="header">Are you sure you want to do that?</div>
+        <div class="close-button">✖</div>
+      </div>
+
+      <div class="second-row">
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam
+          minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem
+          consectetur
+          sequi amet aspernatur cumque!</div>
+      </div>
+
+
+      <div class="third-row">
+        <button class="continue">Continue</button>
+        <button class="cancel">Cancel</button>
+      </div>
     </div>
-    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam
-      minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur
-      sequi amet aspernatur cumque!</div>
-    <button class="continue">Continue</button>
-    <button class="cancel">Cancel</button>
+
   </div>
 </body>
 
